<resources>
    <string name="app_name">Checkboxes_and_etc</string>
    <string name="chocolate_syrup">Chocolate Syrup</string>
    <string name="sprinkles">Sprinkles</string>
    <string name="crushed_nuts">Crushed Nuts</string>
    <string name="cherries">Cherries</string>
    <string name="orio_cookie">Orio Cookie Crumbles</string>
    <string name="show_toast">Show Toast</string>
    <string name="toast1">Toppings:Chocolate syrup cherries</string>
    <string name="toast2">Toppings:Sprinkles cherries</string>
    <string name="toast3">Toppings:Crushed Nuts cherries</string>
    <string name="toast4">Toppings:Cherries</string>
    <string name="toast5">Toppings:Orio Cookie Crumbles cherries</string>
</resources>