<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/chocolate_syrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chocolate_syrup"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="67dp"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <CheckBox
        android:id="@+id/sprinkles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sprinkles"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="117dp"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chocolate_syrup"/>

    <CheckBox
        android:id="@+id/crushed_nuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crushed_nuts"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="168dp"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sprinkles"/>

    <CheckBox
        android:id="@+id/cherries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cherries"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="217dp"
        android:onClick="onCheckBoxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crushed_nuts"/>

    <CheckBox
        android:id="@+id/orio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoxClicked"
        android:text="@string/orio_cookie"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cherries" />

    <Button
        android:id="@+id/show_toast"
        android:layout_width="124dp"
        android:layout_height="43dp"
        android:text="@string/show_toast"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="245dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orio"/>


</androidx.constraintlayout.widget.ConstraintLayout>